@@ -972,7 +972,17 @@ MHD_set_connection_value (struct MHD_Connection *connection,
                           const char *key, const char *value);
 
 /**
- * Sets the global error handler to a different implementation
+ * Sets the global error handler to a different implementation.  "cb"
+ * will only be called in the case of typically fatal, serious
+ * internal consistency issues.  These issues should only arise in the
+ * case of serious memory corruption or similar problems with the
+ * architecture.  While "cb" is allowed to return and MHD will then
+ * try to continue, this is never safe.
+ *
+ * The default implementation that is used if no panic function is set
+ * simply calls "abort".  Alternative implementations might call
+ * "exit" or other similar functions.
+ *
  * @param cb new error handler
  * @param cls passed to error handler
  */
